<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.roastedroot</groupId>
  <artifactId>w9s</artifactId>
  <version>999-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>w9s</name>
  <description>Terminal UI for inspecting WebAssembly modules</description>
  <url>https://github.com/roastedroot/w9s/</url>

  <licenses>
    <license>
      <name>Apache-2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>andreaTP</id>
      <name>Andrea Peruffo</name>
      <email>andrea.peruffo1982@gmail.com</email>
      <organization>IBM</organization>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git://github.com/roastedroot/w9s.git</connection>
    <developerConnection>scm:git:ssh://github.com:roastedroot/w9s.git</developerConnection>
    <url>http://github.com/roastedroot/w9s/tree/main</url>
  </scm>

  <properties>
    <!-- build settings -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.release>25</maven.compiler.release>
    <maven.compiler.failOnWarning>true</maven.compiler.failOnWarning>
    <maven.dependency.failOnWarning>true</maven.dependency.failOnWarning>

    <!-- build tool versions -->
    <checkstyle.version>13.2.0</checkstyle.version>
    <maven-checkstyle-plugin.version>3.6.0</maven-checkstyle-plugin.version>
    <spotless-maven-plugin.version>3.2.1</spotless-maven-plugin.version>
    <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
    <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
    <surefire-plugin.version>3.5.2</surefire-plugin.version>

    <!-- test versions -->
    <junit.version>5.14.2</junit.version>

    <!-- runtime versions -->
    <chicory.version>1.6.1</chicory.version>
    <picocli.version>4.7.7</picocli.version>
    <tamboui.version>0.2.0-SNAPSHOT</tamboui.version>
  </properties>

  <repositories>
    <repository>
      <id>ossrh-snapshots</id>
      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>com.dylibso.chicory</groupId>
      <artifactId>wasm</artifactId>
      <version>${chicory.version}</version>
    </dependency>
    <dependency>
      <groupId>com.dylibso.chicory</groupId>
      <artifactId>wasm-tools</artifactId>
      <version>${chicory.version}</version>
    </dependency>
    <dependency>
      <groupId>dev.tamboui</groupId>
      <artifactId>tamboui-toolkit</artifactId>
      <version>${tamboui.version}</version>
    </dependency>
    <dependency>
      <groupId>dev.tamboui</groupId>
      <artifactId>tamboui-panama-backend</artifactId>
      <version>${tamboui.version}</version>
    </dependency>
    <dependency>
      <groupId>info.picocli</groupId>
      <artifactId>picocli</artifactId>
      <version>${picocli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>build-rustc-demangle-wasm</id>
            <goals>
              <goal>run</goal>
            </goals>
            <phase>generate-resources</phase>
            <configuration>
              <target>
                <exec dir="${project.basedir}/src/main/wasm/rustc-demangle" executable="cargo" failonerror="true">
                  <arg value="build"/>
                  <arg value="--target"/>
                  <arg value="wasm32-wasip1"/>
                  <arg value="--release"/>
                </exec>
                <copy file="${project.basedir}/src/main/wasm/rustc-demangle/target/wasm32-wasip1/release/rustc_demangle_wasm.wasm" tofile="${project.basedir}/src/main/wasm/rustc_demangle.wasm"/>
              </target>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.dylibso.chicory</groupId>
        <artifactId>chicory-compiler-maven-plugin</artifactId>
        <version>${chicory.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
            </goals>
            <configuration>
              <wasmFile>${project.basedir}/src/main/wasm/rustc_demangle.wasm</wasmFile>
              <name>io.roastedroot.w9s.RustcDemangleModule</name>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <parameters>true</parameters>
          <release>${maven.compiler.release}</release>
          <annotationProcessorPaths>
            <path>
              <groupId>info.picocli</groupId>
              <artifactId>picocli-codegen</artifactId>
              <version>${picocli.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
        <executions>
          <execution>
            <id>default-compile</id>
            <configuration>
              <compilerArgs>
                <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
              </compilerArgs>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>${maven-shade-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>shade</goal>
            </goals>
            <phase>package</phase>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>io.roastedroot.w9s.Main</mainClass>
                </transformer>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
              </transformers>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                  </excludes>
                </filter>
              </filters>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire-plugin.version}</version>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>format</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.diffplug.spotless</groupId>
            <artifactId>spotless-maven-plugin</artifactId>
            <version>${spotless-maven-plugin.version}</version>
            <configuration>
              <formats>
                <format>
                  <includes>
                    <include>*.md</include>
                    <include>.gitignore</include>
                  </includes>
                  <trimTrailingWhitespace/>
                  <endWithNewline/>
                  <indent>
                    <spaces>true</spaces>
                    <spacesPerTab>2</spacesPerTab>
                  </indent>
                </format>
              </formats>
              <java>
                <includes>
                  <include>**/src/main/java/**/*.java</include>
                  <include>**/src/test/java/**/*.java</include>
                </includes>
                <googleJavaFormat>
                  <version>1.28.0</version>
                  <style>AOSP</style>
                  <reflowLongStrings>true</reflowLongStrings>
                  <formatJavadoc>false</formatJavadoc>
                </googleJavaFormat>
                <importOrder/>
                <removeUnusedImports/>
              </java>
              <pom>
                <includes>
                  <include>**/pom.xml</include>
                </includes>
                <excludes>
                  <exclude>**/target/**/*.xml</exclude>
                </excludes>
                <sortPom>
                  <expandEmptyElements>false</expandEmptyElements>
                  <sortDependencies>scope,groupId,artifactId</sortDependencies>
                  <sortDependencyExclusions>groupId,artifactId</sortDependencyExclusions>
                  <sortPlugins>groupId,artifactId</sortPlugins>
                </sortPom>
              </pom>
            </configuration>
            <executions>
              <execution>
                <id>format</id>
                <goals>
                  <goal>apply</goal>
                </goals>
                <phase>process-sources</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>native</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <version>0.11.1</version>
            <extensions>true</extensions>
            <executions>
              <execution>
                <id>build-native</id>
                <goals>
                  <goal>compile-no-fork</goal>
                </goals>
                <phase>package</phase>
              </execution>
            </executions>
            <configuration>
              <mainClass>io.roastedroot.w9s.Main</mainClass>
              <imageName>w9s</imageName>
              <buildArgs>
                <buildArg>--no-fallback</buildArg>
                <buildArg>--initialize-at-build-time=io.roastedroot.zerofs</buildArg>
                <buildArg>-H:+ForeignAPISupport</buildArg>
                <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
              </buildArgs>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
